<resources>
    <string name="app_name">Weight Mates</string>
    <string name="action_counter">Counter</string>
    <string name="action_report">Report</string>
    <string name="counterTitle">Welcome to Weight Mates</string>
    <string name="counterSubtitle">Please Count You Calories</string>
    <string name="countButton">Count</string>
    <string name="kilo">KiloCalorie</string>
    <string name="cal">Calorie</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">Calorie Total</string>
    <string name="reportTitle">Calorie Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_calories">Enter Calories</string>

    <string name="title_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weight Mates</string>
    <string name="nav_header_subtitle">Lose Weight With Friends</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_counter">Counter</string>
    <string name="menu_report">Report</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="aboutus_title">Weight Mates</string>
    <string name="aboutus_message">This is Weight Mates, where you share your progress with friends</string>

    <string name="messageLoading">Please wait, it may take a few minutes</string>

    <string name="action_edit">Edit Calorie</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Update Your Calories</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="menu_report_all">All Calories</string>
    <string name="select_profile_image">Select Profile Image</string>
    <!--END Firebase Resources-->
</resources>
