<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_counter"
            android:icon="@drawable/ic_menu_counter"
            android:title="@string/menu_counter" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_report_all"
            android:icon="@drawable/ic_menu_report_all"
            android:title="@string/menu_report_all" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Share with Friends">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item android:title="See You Next Time">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>

